fix color contrast on green backgrounds

--- a/css/style.css
+++ b/css/style.css
@@ -34,8 +34,8 @@ img {
   width: 100%;
 }
 a {
+  color: #000;
   text-decoration: none;
-  color: #82c59c;
 }
 
 blockquote p {
@@ -51,11 +51,11 @@ button {
   margin-top: 15px;
   padding: 10px 20px;
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
   border-radius: 4px;
 }
 button a {
-  color: #ffffff;
+  color: #000;
 }
 
 .wrapper {
@@ -83,7 +83,7 @@ nav {
 }
 
 .nav-links a {
-  color: white;
+  color: black;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -119,7 +119,7 @@ main {
 
 .img-credit {
   font-size: 10px;
-  color: #999999;
+  color: grey;
 }
 
 .card-author-category {
@@ -302,7 +302,7 @@ input {
 
 .submit-input input {
   background-color: #82c59c;
-  color: #fff;
+  color: #000;
   text-transform: uppercase;
   border-color: #82c59c;
 }
